tests/toylang/neg/001694_mutation.toylang
program a = { while then do sleep; } .
